feat(knowledge, live): 添加知识库和流媒体直播服务器功能
- 添加知识库AI搜索和文档管理功能
- 添加流媒体直播服务器